@@ -1,3 +1,4 @@
+* Add old_password to set_preferences of res.user on password change
 * Allow to drop constraint, index and foreign key with custom table name
 * Added column_rename on TableHandler
 * Add new tool reduce_ids
